# sentence2pinyin

./: .gitignore  CMakeLists.txt  README.md  test.cc
include/: hanzi2pinyin.h
src/: hanzi2pinyin.cc
